Estrutura do header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
 
     <body>
         <header>
-            <nav></nav>
+            <div>
+                <img src="img/fiap.png" alt="Logo da FIAP">
+            </div>
+
+            <nav>
+                <ul>
+                    <li>
+                        <a href="">Problema</a>
+                    </li>
+                    <li>
+                        <a href="">Solução</a>
+                    </li>
+                    <li>
+                        <a href="">Objetivos</a>
+                    </li>
+                    <li>
+                        <a href="">Benefícios</a>
+                    </li>
+                    <li>
+                        <a href="">Proposta</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <button>
+                Entrar
+            </button>
         </header>
 
         <main>
