--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
         <link rel="stylesheet" href="css/main.css">
-        <title>GS 01</title>
+
+        <title>Conheça nossa solução</title>
     </head>
 
     <body>
@@ -42,16 +44,19 @@
         <main>
             <section class="secao3">
                 <div>
-                <h1>Ajudamos moradores locais que sofrem com a poluição dos rios e mares. </h1>
-                <h4>Trabalhamos com empenho na limpeza e tratamentos das águas poluidas!</h4>
+                    <h1>Ajudamos moradores locais que sofrem com a poluição dos rios e mares.</h1>
+                    <h4>Trabalhamos com empenho na limpeza e tratamentos das águas poluidas!</h4>
                 </div>
+
                 <div class="grupo">
                     <div>
                         <span class="material-symbols-outlined">
                             group
-                            </span><h4>2000</h4>
-                        <h5>De pessoas ajudadas</h5>
+                        </span>
+                        <h4>2000</h4>
+                        <h5>pessoas ajudadas</h5>
                     </div>
+
                     <div>
                         <span class="material-symbols-outlined">
                             waves
@@ -61,15 +66,34 @@
                     </div>
                 </div>
             </section>
+
             <section class="secao4">
-                <div class="img_secao4">
-                    <img src="img/plastico_oceano.png" alt="plastico">
+                <div>
+                    <img src="img/plastico_oceano.png" alt="Crianças pisando sob o lixo">
                 </div>
-               <div class="texto_secao4">
-                    <h4 class="titulo_texto4">Nosso público-alvo é composto por indivíduos e organizações que valorizam a preservação ambiental e se preocupam com a saúde dos ecossistemas marinhos e fluviais. Entre eles, estão:</h1>
-                    <h4>Organizações ambientais e sem fins lucrativos: Essas organizações estão comprometidas com a proteção dos oceanos e rios e buscam parcerias com empresas que compartilham seus valores e objetivos.</h4>
-                    <h4>Pescadores e comunidades locais: Pessoas que dependem dos recursos marinhos e fluviais para sua subsistência, como pescadores e comunidades ribeirinhas. Eles têm interesse na preservação dos ecossistemas aquáticos para garantir a continuidade de suas atividades.</h4>
-                    <h4>Municípios e governos locais: Governos municipais e estaduais que estão interessados em soluções para a poluição das praias e corpos d'água em suas jurisdições, seja para atender a regulamentações ambientais ou para promover o turismo sustentável.</h4>
+
+                <div class="texto_secao4">
+                    <h4>
+                        Nosso público-alvo é composto por indivíduos e organizações que valorizam a preservação 
+                        ambiental e se preocupam com a saúde dos ecossistemas marinhos e fluviais. Entre eles, estão:
+                    </h4>
+                    <p>
+                        <strong>Organizações ambientais e sem fins lucrativos:</strong>
+                        Essas organizações estão comprometidas com a proteção dos oceanos e rios e buscam parcerias 
+                        com empresas que compartilham seus valores e objetivos.
+                    </p>
+                    <p>
+                        <strong>Pescadores e comunidades locais:</strong>
+                        Pessoas que dependem dos recursos marinhos e fluviais para sua subsistência, como pescadores 
+                        e comunidades ribeirinhas. Eles têm interesse na preservação dos ecossistemas aquáticos para 
+                        garantir a continuidade de suas atividades.
+                    </p>
+                    <p>
+                        <strong>Municípios e governos locais:</strong>
+                        Governos municipais e estaduais que estão interessados em soluções para a poluição das 
+                        praias e corpos d'água em suas jurisdições, seja para atender a regulamentações ambientais 
+                        ou para promover o turismo sustentável.
+                    </p>
                 </div>
             </section>
         </main>
