--- a/index.html
+++ b/index.html
@@ -98,7 +98,18 @@
             </section>
         </main>
 
-        <footer></footer>
+        <footer>
+            <div>
+                <img src="img/fiap.png" alt="Logo da FIAP">
+            </div>
+
+            <span>
+                Global Solution
+                <strong>Blue Future</strong>
+            </span>
+
+            <strong>2024</strong>
+        </footer>
 
         <script src="js/main.js"></script>
     </body>
