Slider de imagens

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="">Problema</a>
                     </li>
                     <li>
-                        <a href="">Solução</a>
+                        <a href="" >Solução</a>
                     </li>
                     <li>
                         <a href="">Objetivos</a>
@@ -42,6 +42,38 @@
         </header>
 
         <main>
+            <section class="slider">
+                <div class="slides">
+                    <div class="slide">
+                        <img src="img/img_1.jpg" alt="Fundo azul futurista">
+
+                        <p>
+                            Ciência,
+                            sustentabilidade,
+                            tecnologia
+                        </p>
+                    </div>
+
+                    <div class="slide">
+                        <img src="img/img_2.jpg" alt="Fundo azul futurista">
+
+                        <p>Cada atitude importa</p>
+                    </div>
+
+                    <div class="slide">
+                        <img src="img/img_3.jpg" alt="Fundo azul futurista">
+
+                        <p>Muitos futuros, uma solução</p>
+                    </div>
+
+                    <div class="slide">
+                        <img src="img/img_4.jpg" alt="Fundo azul futurista">
+
+                        <p>O futuro é azul</p>
+                    </div>
+                </div>
+            </section>
+
             <section class="secao3">
                 <div>
                     <h1>Ajudamos moradores locais que sofrem com a poluição dos rios e mares.</h1>
@@ -111,6 +143,6 @@
             <strong>2024</strong>
         </footer>
 
-        <script src="js/main.js"></script>
+        <script src="js/main.js" defer></script>
     </body>
 </html>
