--- a/index.html
+++ b/index.html
@@ -74,6 +74,32 @@
                 </div>
             </section>
 
+            <section class="section1">
+                <h1>Visualize o impacto da poluição no oceano</h1>
+
+                <div class="container">
+                    <div class="texts">
+                        <p>
+                            A cada dia, toneladas de poluentes são despejadas nos mares. Entender o impacto das nossas 
+                            ações em diferentes prazos é um fator crucial para fazer a diferença.
+                        </p>
+    
+                        <p>
+                            Use nosso simulador para entender o alcance dessa crise e inspire-se a fazer a 
+                            mudança.
+                        </p>
+
+                        <a href="">
+                            Teste nosso simulador de poluição
+                        </a>
+                    </div>
+    
+                    <div>
+                        <img src="img/img_9.jpg" alt="Fundo azul futurista">
+                    </div>
+                </div>
+            </section>
+
             <section class="secao3">
                 <div>
                     <h1>Ajudamos moradores locais que sofrem com a poluição dos rios e mares.</h1>
