--- a/index.html
+++ b/index.html
@@ -202,6 +202,27 @@
                     </p>
                 </div>
             </section>
+        <h3 class="Titulo_secao5">Apresentamos o revolucionário Calculador de Poluição da Água, uma ferramenta essencial para monitorar e mitigar os efeitos nocivos da poluição hídrica. Com este dispositivo inovador, você desfruta de uma série de benefícios que promovem a preservação ambiental e a saúde pública:</h3>
+        <div class="a">
+            <div class="b"><div class="subtitulo">Segurança garantida na hora de saber se a água é potavel</div></div>
+            <div class="c"><div class="subtitulo">Conta com produtos que auxiliam na limpagem da água</div></div>
+            <div class="d"><div class="subtitulo">Preservação de habitats aquáticos e a manutenção do equilíbrio ecológico.</div></div>
+        </div>
+        </div> 
+        
+        <h3 class="Titulo_secao6">Fornece informações sobre a qualidade da água, mas também capacita você a tomar decisões mais conscientes, protegendo sua saúde, economizando recursos e contribuindo para um meio ambiente mais limpo e saudável para todos</h3>
+        <div class="imagem_praia"><img src="img/praia limpa.png" alt="praia_limpa"></div> 
+
+
+
+
+
+
+
+
+
+
+        
         </main>
 
         <footer>
