Ajustes na seção 6

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     </head>
 
     <body>
-        <!-- Implementar ancôra para as seções -->
         <header>
             <div>
                 <img src="img/fiap.png" alt="Logo da FIAP">
@@ -232,8 +231,8 @@
                 </div>
             </section>
             
-            <section>
-                <h3 class="Titulo_secao6">
+            <section class="secao6">
+                <h3>
                     Fornece informações sobre a qualidade da água, mas também capacita você a tomar decisões mais 
                     conscientes, protegendo sua saúde, economizando recursos e contribuindo para um meio ambiente 
                     mais limpo e saudável para todos
