Ajustes de responsividade

--- a/index.html
+++ b/index.html
@@ -210,20 +210,20 @@
                     desfruta de uma série de benefícios que promovem a preservação ambiental e a saúde pública:
                 </h3>
                 
-                <div class="a">
-                    <div class="b">
+                <div class="images">
+                    <div class="image_1">
                         <p>
                             Segurança garantida na hora de saber se a água é potavel
                         </p>
                     </div>
 
-                    <div class="c">
+                    <div class="image_2">
                         <p>
                             Conta com produtos que auxiliam na limpagem da água
                         </p>
                     </div>
 
-                    <div class="d">
+                    <div class="image_3">
                         <p>
                             Preservação de habitats aquáticos e a manutenção do equilíbrio ecológico.
                         </p>
