--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 </ul>
             </nav>
 
-            <button>
+            <a class="login" href="pages/login.html">
                 Entrar
-            </button>
+            </a>
         </header>
 
         <main>
