--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
         <link rel="stylesheet" href="css/main.css">
 
-        <title>Conheça nossa solução</title>
+        <title>BlueTech</title>
     </head>
 
     <body>
@@ -19,19 +19,22 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="">Problema</a>
+                        <a href="#section1">Solução</a>
                     </li>
                     <li>
-                        <a href="" >Solução</a>
+                        <a href="#section2">Tecnologias</a>
                     </li>
                     <li>
-                        <a href="">Objetivos</a>
+                        <a href="#section3">Impacto</a>
                     </li>
                     <li>
-                        <a href="">Benefícios</a>
+                        <a href="#section4">Público</a>
                     </li>
                     <li>
-                        <a href="">Proposta</a>
+                        <a href="#section5">Benefícios</a>
+                    </li>
+                    <li>
+                        <a href="#section6">Proposta</a>
                     </li>
                 </ul>
             </nav>
@@ -74,7 +77,7 @@
                 </div>
             </section>
 
-            <section class="section1">
+            <section class="section1" id="section1">
                 <h1>Visualize o impacto da poluição no oceano</h1>
 
                 <div class="container">
@@ -100,7 +103,7 @@
                 </div>
             </section>
 
-            <section class="section2">
+            <section class="section2" id="section2">
                 <div class="header">
                     <h1>Os recursos mais avançados</h1>
                     <p>
@@ -148,7 +151,7 @@
                 </div>
             </section>
 
-            <section class="secao3">
+            <section class="secao3" id="section3">
                 <div>
                     <h1>Ajudamos moradores locais que sofrem com a poluição dos rios e mares.</h1>
                     <h4>Trabalhamos com empenho na limpeza e tratamentos das águas poluidas!</h4>
@@ -173,7 +176,7 @@
                 </div>
             </section>
 
-            <section class="secao4">
+            <section class="secao4" id="section4">
                 <div>
                     <img src="img/plastico_oceano.png" alt="Crianças pisando sob o lixo">
                 </div>
@@ -203,7 +206,7 @@
                 </div>
             </section>
 
-            <section class="secao5">
+            <section class="secao5" id="section5">
                 <h3>
                     Apresentamos o revolucionário Calculador de Poluição da Água, uma ferramenta essencial para 
                     monitorar e mitigar os efeitos nocivos da poluição hídrica. Com este dispositivo inovador, você 
@@ -231,7 +234,7 @@
                 </div>
             </section>
             
-            <section class="secao6">
+            <section class="secao6" id="section6">
                 <h3>
                     Fornece informações sobre a qualidade da água, mas também capacita você a tomar decisões mais 
                     conscientes, protegendo sua saúde, economizando recursos e contribuindo para um meio ambiente 
