--- a/index.html
+++ b/index.html
@@ -157,6 +157,10 @@
                     <h4>Trabalhamos com empenho na limpeza e tratamentos das águas poluidas!</h4>
                 </div>
 
+                <div class="img_container">
+                    <img src="img/pessoas_ajuda.jpg" alt="Pessoas retirando lixo de uma praia.">
+                </div>
+
                 <div class="grupo">
                     <div>
                         <span class="material-symbols-outlined">
